# kidsPo

./: build.js  index.html  kids-points.service  kids_points.db  lefthook.yaml  mise.toml  package.json  pnpm-lock.yaml  pyproject.toml  readme.md  sw.js  tailwind.config.js  vite.config.js
api/: main.py
api/database/: __init__.py  database.py  models.py
api/services/: adjustment_service.py  child_service.py  family_service.py
public/: manifest.json  sw.js
src/: App.svelte  auto-imports.d.ts  main.js  stores.svelte.js
src/components/drawers/: HistoryDrawer.svelte
src/components/family/: ChildList.svelte  HeaderBar.svelte
src/components/forms/: CreateFamilyForm.svelte  JoinFamilyForm.svelte
src/components/modals/: AddChildModal.svelte  ChildHistoryModal.svelte  CustomScoreModal.svelte  FamilySettings.svelte  RenameChildModal.svelte  RenameFamilyModal.svelte
src/components/shared/: CodeForm.svelte  ConfirmDialog.svelte  EmptyState.svelte  Modal.svelte  NameForm.svelte  OfflineIndicator.svelte  OfflineStatus.svelte  Spinner.svelte
src/css/: base.css  tailwind.css
src/lib/: api.js  models.js  repeat_click.js  storage.js  utils.js
src/lib/components/ui/alert-dialog/: alert-dialog-action.svelte  alert-dialog-cancel.svelte  alert-dialog-content.svelte  alert-dialog-description.svelte  alert-dialog-footer.svelte  alert-dialog-header.svelte  alert-dialog-overlay.svelte  alert-dialog-title.svelte  alert-dialog-trigger.svelte  index.js
src/pages/: FamilyBoard.svelte  GetStarted.svelte  JoinFamily.svelte
src/util/: preinit.js
(+26 files in other folders)
